--- a/src/main/resources/zenit/ui/Main.fxml
+++ b/src/main/resources/zenit/ui/Main.fxml
@@ -73,7 +73,7 @@
 		</MenuBar>
 		<SplitPane fx:id="splitPane" dividerPositions="0.2506" focusTraversable="true" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
 			<items>
-				<AnchorPane SplitPane.resizableWithParent="false">
+				<AnchorPane SplitPane.resizableWithParent="true" minWidth="50" maxWidth="200">
 					<children>
 						<TreeView fx:id="treeView" prefHeight="549.0" prefWidth="221.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
 					</children>
@@ -131,12 +131,12 @@
 														</HBox>
 													</children>
 												</AnchorPane>
-												<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="269.0" prefWidth="667.0">
+												<AnchorPane minHeight="50" prefHeight="269.0" prefWidth="667.0">
 													<children>
 														<AnchorPane fx:id="consolePane" prefHeight="269.0" prefWidth="667.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" >
 															<children>
 																<fx:include source="/zenit/console/ConsolePane.fxml" fx:id="console"></fx:include>
-															</children>
+															</children> 
 														</AnchorPane>
 													</children>
 												</AnchorPane>
