--- a/src/main/resources/zenit/settingspanel/SettingsPanel.fxml
+++ b/src/main/resources/zenit/settingspanel/SettingsPanel.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -20,12 +21,13 @@
          <children>
             <Button fx:id="btnJavaHome" layoutY="38.0" minHeight="40.0" mnemonicParsing="false" onAction="#panelToFront" prefHeight="40.0" prefWidth="150.0" text="Java home" AnchorPane.bottomAnchor="322.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0" />
             <Button fx:id="btnTextAppearance" layoutX="20.0" layoutY="17.0" minHeight="38.0" mnemonicParsing="false" onAction="#panelToFront" prefHeight="38.0" prefWidth="84.0" text="Text Appearance" AnchorPane.bottomAnchor="362.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-            <Button fx:id="btnTheme" layoutX="46.0" layoutY="78.0" mnemonicParsing="false" onAction="#panelToFront" text="Theme" AnchorPane.bottomAnchor="282.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0">
+            <Button fx:id="btnTheme" layoutX="46.0" layoutY="78.0" mnemonicParsing="false" onAction="#panelToFront" text="Dark Mode" AnchorPane.bottomAnchor="282.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="80.0">
                <opaqueInsets>
                   <Insets />
                </opaqueInsets></Button>
             <Button fx:id="btnSupport" layoutX="8.0" layoutY="78.0" mnemonicParsing="false" onAction="#panelToFront" text="Support" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="360.0" />
-            <Button layoutX="46.0" layoutY="129.0" mnemonicParsing="false" text="Custom CSS" AnchorPane.bottomAnchor="238.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="120.0" />
+            <Button fx:id="btnCustomCSS" layoutX="46.0" layoutY="129.0" mnemonicParsing="false" onAction="#panelToFront" text="Custom CSS" AnchorPane.bottomAnchor="242.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="120.0" />
+            <Button id="pnlCusomTheme" fx:id="btnCustomTheme" layoutX="46.0" layoutY="162.0" mnemonicParsing="false" onAction="#panelToFront" text="Custom Theme" AnchorPane.bottomAnchor="202.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="160.0" />
          </children>
       </AnchorPane>
       <AnchorPane id="pnlSupport" fx:id="pnlSupport" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -111,8 +113,20 @@
                   <ListView id="listViewAddedCSS" fx:id="listViewAddedCSS" prefHeight="211.0" prefWidth="600.0" />
                </content>
             </ScrollPane>
-            <Button layoutX="420.0" layoutY="121.0" mnemonicParsing="false" onAction="#addCSSLine" text="Add" />
+            <Button id="btnAddCSSLine" fx:id="btnAddCSSLine" layoutX="420.0" layoutY="121.0" mnemonicParsing="false" onAction="#addCSSLine" text="Add" />
          </children>
       </AnchorPane>
+      <AnchorPane id="pnlCustomTheme" fx:id="pnlCustomTheme" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="150.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <Label layoutX="14.0" layoutY="14.0" styleClass="paneHeader" text="Custom Theme" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="15.0" />
+            <ColorPicker fx:id="colorPickerPrimaryColor" layoutX="366.0" layoutY="116.0" />
+            <ColorPicker layoutX="366.0" layoutY="163.0" />
+            <ColorPicker layoutX="366.0" layoutY="211.0" />
+            <ColorPicker layoutX="366.0" layoutY="258.0" />
+            <Label layoutX="61.0" layoutY="121.0" text="Primary Color" />
+            <Label layoutX="61.0" layoutY="168.0" text="Secondary Color" />
+            <Label layoutX="61.0" layoutY="216.0" text="3" />
+            <Label layoutX="61.0" layoutY="263.0" text="4" />
+         </children></AnchorPane>
    </children>
 </fx:root>
