Can now undo deletion of files through tree view (Ctrl+Z).
Also delete selected file by pressing DEL.

--- a/src/main/resources/zenit/ui/mainStyle.css
+++ b/src/main/resources/zenit/ui/mainStyle.css
@@ -94,6 +94,10 @@
 	-fx-fill: #fffa;
 }
 
+#treeView *:selected {
+	-fx-background-color: #1e1e1e66;
+}
+
 #treeView .arrow  {
 	-fx-background-color: #fffb;
 }
@@ -101,6 +105,7 @@
 .split-pane:horizontal > .split-pane-divider {
    -fx-background-color: #1e1e1e;
 }
+
 .split-pane:vertical > .split-pane-divider {
    -fx-background-color: #1e1e1e;
 }
